--- a/BottomNavigationViewLibrary/build.gradle
+++ b/BottomNavigationViewLibrary/build.gradle
@@ -23,7 +23,9 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:24.0.0'
+    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.android.support:design:24.1.1'
+    compile 'com.infstory:proguard-annotations:1.0.2'
 }
 
 publish {
